# chemem2-dev

./: .coverage  .gitignore  7jjo_conf.txt  8y9g_conf.txt  CHANGE_LOG.txt  CMakeLists.txt  LICENSE.txt  MANIFEST.in  README.md  TODO.txt  conda_build_commands.sh  detect_dependancies.py  environment-dev.yml  meta.yaml  pyproject.toml  run_chemem_high_Res.py  to_do_for_agnel.rtf
.github/workflows/: ci.yml
ChemEM/: __init__.py  __main__.py  config.py  messages.py  protocol_spec.py
ChemEM/cpp/: grid_maps.cpp  ligand_fitting.cpp  ligand_fitting.h
ChemEM/cpp/docking_refactor/: DensityUtils.h  GeometryUtils.h  PreComputedData.cpp  PreComputedData.h  Scorers.cpp  Scorers.h  ScoringFunctions.cpp  ScoringFunctions.h  SearchFunctions.cpp  SearchFunctions.h  bindings copy.cpp  nealderMead.cpp  nealderMead.h  reulsts.py
ChemEM/cpp/docking_refactor/new_search/: SearchFunctions.cpp  SearchFunctions.h  bindings.cpp
ChemEM/cpp/docking_refactor/old_search/: SearchFunctions copy 2.cpp  SearchFunctions copy 3.cpp  SearchFunctions copy 3.h  SearchFunctions copy.h
ChemEM/data/: binding_site_model.py  data.py  system.py
ChemEM/data/ECHO_dock/: HBOND_POLY_A.json  HBOND_POLY_B.json  HBOND_POLY_C.json  TableA.json  TableB.json  TableC.json  _TableA.json  extend_tables.py
ChemEM/data/ECHO_dock/aromatic/: 0-0-p.pkl  0-0-t.pkl  0-1-p.pkl  0-1-t.pkl  0-2-p.pkl  0-2-t.pkl  0-3-p.pkl  0-3-t.pkl  0-4-p.pkl  0-4-t.pkl  0-5-p.pkl  0-5-t.pkl  1-0-t.pkl  1-1-p.pkl  1-1-t.pkl  1-2-t.pkl  1-3-t.pkl  1-4-t.pkl  1-5-p.pkl  1-5-t.pkl  2-0-t.pkl  2-1-p.pkl  2-1-t.pkl  2-2-p.pkl  2-2-t.pkl  2-3-t.pkl  2-4-t.pkl  2-5-p.pkl  2-5-t.pkl  3-0-t.pkl  3-1-p.pkl  3-1-t.pkl  3-2-p.pkl  3-2-t.pkl  3-3-p.pkl  3-3-t.pkl  3-4-t.pkl  3-5-p.pkl  3-5-t.pkl  4-0-t.pkl  (+17 more)
ChemEM/data/ECHO_dock/halogen/: 0-19.pkl  0-26.pkl  1-26.pkl  1-38.pkl  3-22.pkl  3-24.pkl
ChemEM/data/_data/: __init__.py  atom_typing.py  kernels.py  physchem.py  system_constants.py  tables.py
ChemEM/parsers/: EMMap.py  components.py  interchange.py  ligand_parser.py  mapping.py  models.py  openff_ligand.py  parse_forcefield.py  protein_parser.py  protein_parser_old.py
ChemEM/parsers/remodel/: fixer.py  ligand_ops.py  nucleic_acid.py  pipeline.py  protonation.py  topology_ops.py
ChemEM/protocols/: alpha_mask.py  binding_site.py  confidence_map.py  docking.py  post_processing.py
ChemEM/protocols/_docking/: docking.py  mmgbsa_score.py
ChemEM/protocols/_docking/precomputed_data/: site_map_factory.py  site_map_utils.py
ChemEM/protocols/mapQ_score/: mapQ_score.py  mapq_utils.py
ChemEM/tools/: aromatic_score.py  binding_site.py  biomolecule.py  density.py  docking.py  forces.py  geometry.py  grid_maps.py  halogen_bond_score.py  ligand.py  map_q_score.py  mmgbsa_score.py  pose_minimiser.py  precomputed_data.py  precomputed_data_needed_for_new_lgbfs_optimiser.py  precomputed_data_old.py  util.py
conda-dist/: channeldata.json  index.html
conda-dist/linux-64/: chemem-2.0.0-py311h2bc3f7f_0.conda  current_repodata.json  index.html  repodata.json
conda-dist/linux-64/.cache/: cache.db
conda-dist/noarch/: index.html
test/: Ligand_dep.sdf
tests/: conftest.py  test_ligand.py  test_ligand_ops.py  test_ligand_parser.py  test_openff_ligand.py  test_protonation.py
